# remote_lab

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_4gpu_pilot.sh  run_all_new_baselines.sh  run_parallel_3gpu.sh
configs/: base.json
scripts/: analyze_attention_ranks.py  analyze_cifar10_pair.py  analyze_cifar10_recipe_multi.py  analyze_cifar10_recipe_pair.py  analyze_cifar10_triple.py  analyze_hf_qk_structure.py  analyze_hf_qk_subspace_overlap.py  analyze_jigsaw_pair.py  analyze_jigsaw_triple.py  check_imagenet1k_layout.py  download_c4_realnewslike.py  download_jigsaw_kaggle.sh  export_gpt2_rank_diagnostics.py  extract_attention_geometry_intervals.py  extract_imagenet_results.py  find_all_imagenet_results.py  launch_cifar10_baseline_vs_interval.sh  launch_cifar10_baseline_vs_interval_bs512.sh  launch_cifar10_baseline_vs_interval_recipe_every5.sh  launch_cifar10_baseline_vs_interval_smoke10.sh  launch_cifar10_baseline_vs_interval_smoke10_bs512.sh  launch_cifar10_interval_bs512_continuous_gpu3.sh  launch_cifar10_interval_bs512_continuous_gpu3_200ep.sh  launch_cifar10_vit12_baseline_recipe.sh  launch_cifar10_vit12_baseline_recipe_ema999.sh  launch_cifar10_vit12_baseline_vs_interval_recipe_ema999_front10_every5.sh  launch_cifar10_vit12_baseline_vs_reverse070_080_recipe_ema999_front10_every5.sh  launch_cifar10_vit12_layersym_latent_recipe_r32.sh  launch_cifar10_vit12_zeroasym_gpu2.sh  launch_gpt2_c4_50k.sh  launch_gpt2_c4_8way.sh  launch_imagenet1k_4gpu_pilot_30ep.sh  launch_imagenet1k_triplet_dp2_bs768.sh  launch_imagenet1k_vit12_baseline_recipe.sh  (+27 more)
(+98 files in other folders)
