[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-lab"
version = "0.1.0"
description = "Experiment workspace for remote training and paper reproduction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
